# Galadril

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  gazelle_python.yaml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/workflows/: dashboard.yaml  database.yaml
examples/: pipeline.yaml
front/dashboard/: package.json
front/landing/: nuxt.config.ts  package.json
front/landing/app/components/Default/: CaseMosaic.vue  Navbar.vue
front/landing/app/components/Example/: Expand.vue  Mosaic.vue
front/landing/app/components/Galadril/: ESKGSection.vue  RingilTransition.vue  StudioSection.vue  UseCasesSection.vue
front/landing/app/components/Hero/: Actions.vue  Section.vue  Title.vue
front/landing/app/components/Ringil/: BentoSection.vue  GaladrilTransition.vue  HeroSection.vue  MeshSection.vue  TrackSection.vue
front/landing/app/layouts/: default.vue
front/landing/app/pages/: galadril.vue  index.vue  ringil.vue
front/landing/i18n/: en-US.json  fr-FR.json
infrastructure/docker/: batch.yaml  dashboard.yaml  database.yaml  s3.yaml
infrastructure/docker/init-scripts/: 01-init-spicedb.sh
machine-learning/eru/src/eru/reasoner/: outlines.py
machine-learning/galadril-inference/: BUILD.bazel  pyproject.toml
machine-learning/galadril-inference/examples/: weather.py
machine-learning/galadril-inference/src/galadril_inference/common/: BUILD.bazel
machine-learning/galadril-inference/src/galadril_inference/core/: BUILD.bazel
machine-learning/galadril-inference/src/galadril_inference/loading/: BUILD.bazel
machine-learning/galadril-inference/src/galadril_inference/models/: BUILD.bazel
machine-learning/galadril-inference/tests/core/: BUILD.bazel  test_engine.py  test_registery.py
machine-learning/galadril-inference/tests/models/: BUILD.bazel  test_siglip.py
machine-learning/galadril-inference/tests/storage/: BUILD.bazel  test_local.py  test_s3.py
machine-learning/scribe/examples/: chat.rs
machine-learning/scribe/src/: engine.rs  lib.rs
platform/amarth/: README.md  pyproject.toml
platform/amarth/examples/: intelligence.py  pipeline.py
platform/amarth/src/amarth/: BUILD.bazel  __init__.py  router.py
platform/amarth/src/amarth/discovery/: BUILD.bazel  __init__.py  ensemble.py  lingam.py  notears.py  pcmci.py  peter_clark.py  tigramite.py
platform/amarth/src/amarth/estimation/: BUILD.bazel  dowhy.py  heterogeneous.py
platform/pipeline/: pyproject.toml
platform/pipeline/src/galadril_pipeline/: BUILD.bazel  triggers.py
platform/pipeline/src/galadril_pipeline/models/: __init__.py  connectors.py  pipeline.py
platform/pipeline/tests/: BUILD.bazel  test_triggers.py
platform/vision/: pyproject.toml
platform/vision/src/galadril_vision/: BUILD.bazel  __init__.py  cron.py  main.py
platform/vision/src/galadril_vision/causal/: BUILD.bazel  runner.py
platform/vision/src/galadril_vision/common/: BUILD.bazel  __init__.py  config.py  schemas.py  types.py
platform/vision/src/galadril_vision/connectors/: BUILD.bazel  __init__.py
platform/vision/src/galadril_vision/connectors/authz/: BUILD.bazel  outbox.py  spicedb.py
platform/vision/src/galadril_vision/connectors/kafka/: BUILD.bazel  __init__.py  producer.py  schemas.py  validator.py
platform/vision/src/galadril_vision/connectors/postgres/: client.py  graph.py  vector.py
platform/vision/src/galadril_vision/pipeline/: BUILD.bazel  __init__.py  executor.py  runner.py  transforms.py
platform/vision/tests/: BUILD.bazel  test_causal_mapping_and_cache.py  test_kafka_validator.py  test_pipeline_e2e.py
schemas/avro/: audio.avsc  authz.avsc  authz_tuple.avsc  document.avsc  image.avsc  text.avsc  transaction.avsc
services/gateway/: BUILD.bazel  Cargo.toml  config.toml
services/gateway/migrations/: 0001_gateway_iam_and_policies.sql  0002_vision_entity_embeddings.sql  0003_vision_entity_states.sql  0004_vision_eskg_events.sql  0005_repair_eskg_events_pk.sql  0006_vision_entity_states.sql  0007_gateway_causal_runs.sql
services/gateway/src/: config.rs  main.rs
services/gateway/src/adapters/inbound/graphql/: auth.rs  context.rs  schema.rs  server.rs
services/gateway/src/adapters/outbound/: mod.rs
services/gateway/src/adapters/outbound/database/: bootstrap.rs  data_inspector.rs  entity_states.rs  iam.rs  mod.rs  policy.rs  relations_age.rs  rls.rs  search.rs  tenant_schema.rs  user_directory.rs
services/gateway/src/adapters/outbound/embedding/: mod.rs  text.rs
services/gateway/src/application/ports/: data_inspector.rs  embedding_generator.rs  entity_state_store.rs  iam_store.rs  mod.rs  policy_store.rs  relations_store.rs  search_store.rs  user_directory.rs
services/gateway/src/application/usecases/: authorization.rs  data_explorer.rs  explore.rs  iam_admin.rs  iam_scope.rs  identity.rs  mod.rs  search.rs
services/gateway/src/domain/: mod.rs
services/gateway/src/domain/iam/: mod.rs  permission.rs
services/intake/: BUILD.bazel  Cargo.toml
services/intake/src/adapters/spi/kafka/: producer.rs
services/intake/src/adapters/spi/storage/: s3.rs
services/intake/src/application/: mod.rs
services/intake/src/domain/: ports.rs
