[workspace]
resolver = "3"
members = [
    "machine-learning/scribe",
    "services/intake",
    "services/gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = ""
repository = "https://github.com/RealHinome/Galadril"

[workspace.dependencies]
tokio = "1"
serde = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[patch.crates-io]
gix-fs = { git = "https://github.com/GitoxideLabs/gitoxide", rev = "3af9b4adcbca28e7072b96d266b716efb483893c" }
gix-object = { git = "https://github.com/GitoxideLabs/gitoxide" }
gix-date = { git = "https://github.com/GitoxideLabs/gitoxide" }
gix-config = { git = "https://github.com/GitoxideLabs/gitoxide" }
gix-features = { git = "https://github.com/GitoxideLabs/gitoxide" }
gix-path = { git = "https://github.com/GitoxideLabs/gitoxide" }
gix-ref = { git = "https://github.com/GitoxideLabs/gitoxide" }
gix-validate = { git = "https://github.com/GitoxideLabs/gitoxide" }
