[project]
name = "galadril"
version = "0.1.0"
description = "All Galadril services."
dependencies = [
    "accelerate>=1.13.0",
    "amarth",
    "boto3>=1.43.6",
    "confluent-kafka[avro,json,schema-registry]>=2.14.0",
    "croniter>=6.2.2",
    "daft[iceberg,ray]>=0.7.10",
    "dowhy>=0.14",
    "duckdb>=1.5.2",
    "econml>=0.16.0",
    "faster-whisper>=1.2.1",
    "gliner2>=1.3.1",
    "huggingface-hub>=1.14.0",
    "insightface>=0.7.3",
    "instructor>=1.15.1",
    "librosa>=0.11.0",
    "lightgbm>=4.6.0",
    "moto[s3]>=5.2.0",
    "mypy-boto3-s3>=1.43.5",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.1",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "orjson>=3.11.9",
    "outlines>=1.2.13",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "psycopg[binary,pool]>=3.3.4",
    "pyannote-audio>=4.0.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "ray[default]>=2.55.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.17.1",
    "structlog>=25.5.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.8.0",
    "wespeakerruntime>=1.0.1",
    "pytest>=9.0.3",
    "galadril_inference",
    "authzed>=1.24.4",
    "grpcio>=1.80.0",
    "protobuf>=6.33.6",
]
requires-python = "==3.13.*"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
override-dependencies = [
    "aiohttp>=3.13.4",
    "onnx>=1.21.0",
    "pillow>=12.2.0",
    "Mako>=1.3.12",
    "ray>=2.55.0",
    "cryptography>=46.0.7",
    "Pygments>=2.20.0",
]

[tool.uv.sources]
amarth = { workspace = true }
eru = { workspace = true }
galadril-inference = { workspace = true }
galadril-pipeline = { workspace = true }
timesfm = { git = "https://github.com/google-research/timesfm.git" }

[tool.uv.workspace]
members = [
    "machine-learning/galadril-inference",
    "machine-learning/eru",
    "platform/*",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "opencv-python-headless>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
