load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_pipeline_e2e",
    srcs = ["test_pipeline_e2e.py"],
    deps = [
        "//platform/pipeline/src/galadril_pipeline",
        "//platform/pipeline/src/galadril_pipeline/models",
        "//platform/vision/src/galadril_vision/common",
        "//platform/vision/src/galadril_vision/pipeline",
        "@pip//boto3",
        "@pip//moto",
        "@pip//numpy",
        "@pip//opencv_python_headless",
        "@pip//pytest",
    ],
)

py_test(
    name = "test_causal_mapping_and_cache",
    srcs = ["test_causal_mapping_and_cache.py"],
    deps = ["//platform/vision/src/galadril_vision/causal"],
)

py_test(
    name = "test_kafka_validator",
    srcs = ["test_kafka_validator.py"],
    deps = ["//platform/vision/src/galadril_vision/connectors/kafka"],
)
