load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "core",
    srcs = [
        "__init__.py",
        "engine.py",
        "registry.py",
    ],
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//machine-learning/galadril-inference/src/galadril_inference/common",
        "//machine-learning/galadril-inference/src/galadril_inference/loading",
        "//machine-learning/galadril-inference/src/galadril_inference/models",
        "@pip//structlog",
    ],
)
