load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "connectors",
    srcs = ["__init__.py"],
    imports = ["../.."],
    visibility = ["//platform/vision/src:__subpackages__"],
    deps = [
        "//platform/vision/src/galadril_vision/connectors/kafka",
        "//platform/vision/src/galadril_vision/connectors/postgres",
    ],
)
